k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-frontend
  labels:
    app: taskmanager
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskmanager
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: taskmanager
        tier: frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: frontend
          image: FRONTEND_IMAGE      # replaced by Jenkins sed
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu:    "50m"
              memory: "64Mi"
            limits:
              cpu:    "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
