k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-frontend-svc
  labels:
    app: taskmanager
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: taskmanager
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
